--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <script>
 /* ================= إعدادات قابلة للتعديل ================= */
 // استخدام Flash لسرعة الترجمة
-const API_MODEL = "gemini-2.5-flash"; 
+const API_MODEL = "gemini-2.5-flash-lite"; 
 const API_BASE = "https://generativelanguage.googleapis.com/v1beta/models";
 // تم التعديل: رفع حجم المقطع إلى 10,000 حرف لزيادة كفاءة API
 const SAFE_CHAR_PER_CHUNK = 10000; 
