Enhance index.html with Arabic support and UI updates
Add Arabic translations and improve UI elements for EPUB translator.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,142 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>مترجم EPUB احترافي - Gemini</title>
+    <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f5f7fb;
+            color: #333;
+            padding: 20px;
+            max-width: 900px;
+            margin: auto;
+        }
+        h1 {
+            color: #0f5bd8;
+            border-bottom: 2px solid #0f5bd8;
+            padding-bottom: 10px;
+        }
+        .container {
+            background: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+        }
+        input[type="text"], input[type="file"], button {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+        button {
+            background-color: #0f5bd8;
+            color: white;
+            cursor: pointer;
+            border: none;
+            transition: background-color 0.3s;
+        }
+        button:hover:not(:disabled) {
+            background-color: #0c47a5;
+        }
+        button:disabled {
+            background-color: #a0c3e8;
+            cursor: not-allowed;
+        }
+        #logBox {
+            background: #e9e9e9;
+            padding: 15px;
+            border-radius: 4px;
+            height: 200px;
+            overflow-y: scroll;
+            margin-top: 20px;
+            font-size: 0.9em;
+            direction: ltr; /* لضمان عرض وقت التسجيل بشكل صحيح */
+        }
+        .log-info { color: #007bff; }
+        .log-error { color: #dc3545; font-weight: bold; }
+        .log-ok { color: #28a745; font-weight: bold; }
+        .progress-bar-container {
+            background-color: #ddd;
+            border-radius: 4px;
+            margin-top: 15px;
+        }
+        #progressBar {
+            height: 25px;
+            background-color: #28a745;
+            width: 0%;
+            border-radius: 4px;
+            transition: width 0.3s;
+            text-align: center;
+            line-height: 25px;
+            color: white;
+        }
+        #progressText {
+            display: block;
+            margin-top: 5px;
+            font-weight: bold;
+            text-align: center;
+        }
+        .controls {
+            display: flex;
+            gap: 10px;
+        }
+        .controls button {
+            width: 50%;
+        }
+        #downloadLink {
+            display: none;
+            background-color: #ffc107;
+            color: #333;
+            text-align: center;
+            text-decoration: none;
+            padding: 10px;
+            border-radius: 4px;
+            margin-top: 15px;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>مترجم EPUB احترافي بواسطة Gemini</h1>
+    </header>
+
+    <div class="container">
+        <h2>1. الإعدادات</h2>
+        
+        <label for="apiKey">مفتاح Google AI API:</label>
+        <input type="text" id="apiKey" placeholder="ألصق مفتاح Gemini/Google AI API هنا">
+
+        <label for="epubFile">ملف EPUB للترجمة:</label>
+        <input type="file" id="epubFile" accept=".epub">
+
+        <label for="fewFile">ملف Few-Shot (اختياري - JSON):</label>
+        <input type="file" id="fewFile" accept=".json">
+        <small>ملف JSON يحتوي على نماذج ترجمة سابقة { "en": "...", "ar": "..." }</small>
+
+        <h2>2. التحكم</h2>
+        <div class="controls">
+            <button id="startButton">بدء الترجمة / استئناف</button>
+            <button id="clearButton" style="background-color: #dc3545;">🗑️ مسح حالة الاستئناف</button>
+        </div>
+        
+        <a id="downloadLink" href="#" style="display: none;"></a>
+
+        <div class="progress-bar-container">
+            <div id="progressBar"></div>
+        </div>
+        <span id="progressText">0% - بانتظار الملف والمفتاح</span>
+
+        <h2>3. السجل</h2>
+        <div id="logBox"></div>
+    </div>
 <script>
 /* ================= إعدادات قابلة للتعديل والمراجعة (محدثة) ================= */
 const API_MODEL = "gemini-2.5-flash-lite"; // النموذج الأسرع والأقل تكلفة
@@ -127,7 +266,8 @@ async function callGemini(promptText) {
 /* ------------------- استخراج محتويات EPUB (يجب تخزين HTML) ------------------- */
 async function extractChaptersFromEpub(fileBlob){
   setProgress(2, 'يفك ضغط EPUB ويحدد ملف المحتوى (OPF)...');
-  if (typeof JSZip === 'undefined') throw new Error('مكتبة JSZip لم تُحمّل.');
+  // ⛔️ التحقق من تحميل JSZip
+  if (typeof JSZip === 'undefined') throw new Error('مكتبة JSZip لم تُحمّل. تأكد من وجود وسم <script> لها.'); 
   const zip = await JSZip.loadAsync(fileBlob);
   const containerPath = 'META-INF/container.xml';
   let opfPath;
@@ -413,3 +553,5 @@ async function startWorkflow(){
   }
 }
 </script>
+</body>
+</html>
