--- a/index.html
+++ b/index.html
@@ -1,27 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>EPUB Processor</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>مترجم EPUB احترافي – Gemini</title>
+  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+  <style>
+    :root{--primary:#0f5bd8;--danger:#dc3545;--ok:#28a745}
+    body{font-family:Arial, sans-serif;background:#f5f7fb;color:#222;padding:18px;max-width:1000px;margin:0 auto}
+    h1{color:var(--primary);border-bottom:3px solid var(--primary);padding-bottom:8px}
+    .card{background:#fff;padding:20px;border-radius:10px;box-shadow:0 6px 18px rgba(20,30,60,.08);margin-bottom:18px}
+    input[type="text"], input[type="file"], button, textarea{width:100%;padding:10px;border-radius:6px;border:1px solid #d0d7e6;box-sizing:border-box}
+    .controls{display:flex;gap:10px}
+    .controls button{width:50%}
+    #logBox{height:200px;overflow:auto;background:#f0f3f8;padding:10px;border-radius:6px;direction:ltr;font-size:13px}
+    .progress{background:#ddd;height:22px;border-radius:8px;overflow:hidden}
+    .bar{height:100%;width:0;background:var(--ok);text-align:center;color:#fff;line-height:22px;font-weight:bold}
+    a#downloadLink{display:none;margin-top:10px;padding:10px;background:#ffc107;border-radius:6px;color:#222;text-decoration:none;text-align:center;display:inline-block}
+    .small{font-size:13px;color:#666;margin-top:6px}
+    .muted{color:#666}
+    label{font-weight:700;margin-top:8px;display:block}
+    .flex-row{display:flex;gap:10px;align-items:center}
+    .flex-row > *{flex:1}
+    .hint{font-size:12px;color:#666}
+    .right{direction:rtl}
+  </style>
 </head>
 <body>
+  <h1>مترجم EPUB احترافي بواسطة Gemini</h1>
 
-  <h1>EPUB Cleaner & Processor</h1>
+  <div class="card">
+    <h2>1. الإعدادات</h2>
+    <label for="apiKey">مفتاح Google AI / Gemini API</label>
+    <input id="apiKey" type="text" placeholder="ألصق مفتاح Gemini/Google AI API هنا (لا يخزن تلقائياً)">
 
-  <div class="container">
-    <input type="file" id="fileInput" accept=".epub">
-    <button id="processBtn">Process EPUB</button>
+    <label for="epubFile">ملف EPUB للترجمة</label>
+    <input id="epubFile" type="file" accept=".epub">
+
+    <label for="fewFile">ملف Few-Shot (JSON مصفوفة من أزواج en/ar — اختياري)</label>
+    <input id="fewFile" type="file" accept=".json">
+    <div class="small">مثال: [ { "en":"Hello","ar":"مرحبا" }, ... ]</div>
+
+    <div style="height:12px"></div>
+
+    <label for="modelSelect">النموذج</label>
+    <input id="modelSelect" type="text" value="gemini-2.5-flash-lite">
+
+    <div class="small">Max concurrency و chunk size قابلان للتعديل لاحقاً في الشيفرة</div>
   </div>
 
-  <div id="log"></div>
+  <div class="card">
+    <h2>2. التحكم</h2>
+    <div class="controls">
+      <button id="startButton">بدء الترجمة / استئناف</button>
+      <button id="clearButton" style="background:var(--danger);color:#fff">🗑️ مسح حالة الاستئناف</button>
+    </div>
 
-  <!-- تحميل JSZip بشكل صحيح -->
-  <script type="module" src="zip-loader.js"></script>
+    <div style="height:12px"></div>
 
-  <!-- ملفاتك -->
-  <script src="rules.js"></script>
-  <script src="app.js"></script>
+    <div class="progress">
+      <div id="progressBar" class="bar">0%</div>
+    </div>
+    <div id="progressText" class="small muted">جاهز — اختر ملف ومفتاح</div>
 
+    <a id="downloadLink" href="#" download>⬇️ تنزيل EPUB المترجم</a>
+  </div>
+
+  <div class="card">
+    <h2>3. السجل</h2>
+    <div id="logBox" role="log" aria-live="polite"></div>
+  </div>
+
+  <!-- تطبيق -->
+  <script type="module" src="./app.js"></script>
+  <script type="module" src="./storage.js"></script>
 </body>
 </html>
